[210531] refactoring  - controller에서 model layer을 직접 호출하지 않도록 변경  - model에서 서비스 로직을 services로 이동  - controller - services - model구조로 Layer 분리
